Refactor HTML structure and comments
Updated the loader comment and removed an unused button.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
                 <label for="recherche">Chercher un pokémon</label>
                 <input type="text" id="recherche">
                 <button class="reset-recherche">X</button>
-                <!-- <button type="submit">Rechercher</button> -->
 
-                <!-- Loader -->
+                <!-- Loader Sautant -->
                 <div class="loader">
                     <div class="point"></div>
                     <div class="point"></div>
@@ -44,8 +43,8 @@
             </ul>
         </main>
 
-        <!-- JavaScript -->
         <script src="script.js"></script>
     </body>
+
 
 </html>
